# PBRC

./: Dockerfile  Makefile  README.md  pyproject.toml
BenchForm/: LICENSE  README.md  analysis.py  analysis_reflection.py  behavioral_study.py  convert_to_jsonl.py  eval.py  format_data_bbh.py  reflection.py  requirements.txt  utils.py
BenchForm/data/jsonl/: causal_judgment.jsonl  date_understanding.jsonl  disambiguation_qa.jsonl  hyperbaton.jsonl  logical_deduction_five_objects.jsonl  movie_recommendation.jsonl  navigate.jsonl  ruin_names.jsonl  snarks.jsonl  sports_understanding.jsonl  temporal_sequences.jsonl  tracking_shuffled_objects_three_objects.jsonl  web_of_lies.jsonl
KAIROS/data/final_test/: dataset_info.json  state.json
KAIROS/eval_results/gpt-4o/: gpt-4o-reflection-RAW.json  gpt-4o-reflection-SOCIAL.json  gpt-4o-reflection-SOCIAL_reflected.json
KAIROS/eval_results/gpt4o/: gpt4o-reflection-RAW.json  gpt4o-reflection-t0.json
KAIROS/eval_results_pbrc/gpt-4o/: gpt-4o-reflection-PBRC_SOCIALONLY.json
KAIROS/src/MAS/: eval_mas.py
KAIROS/src/MAS.egg-info/: PKG-INFO  SOURCES.txt
results/sim/: REPORT.md  exp1_social_cascades.csv  exp1b_example_run.csv  exp1c_ablation_lambda.csv  exp2_token_sufficiency.csv  exp2_token_sufficiency_summary.txt  exp3_topology_token_flow.csv  exp4_incomplete_router.csv  exp5_cost_dos.csv
scripts/: download_benchmarks.sh  run_all_simulations.sh
src/pbrc/: metrics.py  pbrc_core.py  social_baseline.py  utils.py
src/pbrc/benchmarks/: kairos_pbrc.py  (+3 more)
src/pbrc_repro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+9 files in other folders)
