[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbrc-repro"
version = "0.1.0"
description = "Reproducibility pipeline for PBRC (simulations + benchmark adapters)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "networkx>=3.1",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
